[metadata]
name = gofer-service
version = 0.1.4
author = Vincent Su and Sean Morris
author_email = sean.smorris@berkeley.edu
description = Grading Service for Edx 8x courses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/data-8/gofer_service
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    gofer-service = gofer_service.gofer_nb:main