[metadata]
name = otter_service
version = attr: otter_service.__version__
author = Vincent Su and Sean Morris
author_email = sean.smorris@berkeley.edu
description = Grading Service for Edx 8x courses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/data-8/otter-service
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
include_package_data=True
python_requires = >=3.8

[options.packages.find]
where=src

[options.package_data]
otter_service: secrets/*.yaml

[options.entry_points]
console_scripts =
    otter_service = otter_service.otter_nb:main